Lab 5 work but not correct